# Gpack

./: CMakeLists.txt  Makefile.win  gpack.dev
GitPack/: main.cpp  packer.cpp  packer.h  unpacker.cpp  unpacker.h
